samples/_failures_safe/1761798662_d827b5_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_aab8a923.c: In function ‘main’:
./samples/SAFE/__tmp_aab8a923.c:148:16: error: expected ‘;’ at end of input
  148 |         fprintf
      |                ^
      |                ;
./samples/SAFE/__tmp_aab8a923.c:148:9: error: expected declaration or statement at end of input
  148 |         fprintf
      |         ^~~~~~~
./samples/SAFE/__tmp_aab8a923.c:148:9: error: expected declaration or statement at end of input
